@@ -10,6 +10,11 @@ the rules for this file:
 ------------------------------------------------------------------------------
 06/17/08 Remi Ricard (papaDoc)
 
+        * Move the function hingeComputeRelativeRotation as a member of 
+          the hinge structure/class.
+
+06/17/08 Remi Ricard (papaDoc)
+
         *  Move the computation of the Relative Rotation for the fixed joint
            into a function.
 
